# bigquery-google-trends-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_rising_terms.json  sample_top_terms.json
src/mcp_google_trends/: bigquery_client.py  config.py  exceptions.py  models.py  server.py  tools.py
tests/: conftest.py  test_server.py  test_tools.py
