[project]
name = "mcp-google-trends"
version = "0.1.0"
description = "MCP server exposing Google Trends data from BigQuery for marketing campaign insights"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-cloud-bigquery>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-google-trends = "mcp_google_trends.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [".venv", "venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
